--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
     "start": "next start",
     "lint": "next lint"
   },
+  
   "dependencies": {
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@next/font": "13.1.2",
+    "@next/font": "14.0.2-canary.13",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "babel-loader": "^8.2.3",
     "eslint": "8.30.0",
-    "eslint-config-next": "13.1.2",
-    "next": "13.1.2",
+    "eslint-config-next": "14.0.2-canary.13",
+    "next": "14.0.2-canary.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "style9": "^0.14.0",
-    "style9-webpack": "^0.3.2",
-    "typescript": "4.9.4"
+    "style9": "^0.18.2",
+    "style9-webpack": "0.5.2",
+    "typescript": "5.2.2"
   }
 }
