--- a/package.json
+++ b/package.json
@@ -8,23 +8,26 @@
     "start": "next start",
     "lint": "next lint"
   },
-  
   "dependencies": {
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@next/font": "14.0.2-canary.13",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "babel-loader": "^8.2.3",
-    "eslint": "8.30.0",
-    "eslint-config-next": "14.0.2-canary.13",
-    "next": "14.0.2-canary.13",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.2-canary.18",
+    "next": "14.0.2-canary.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "0.0.1",
     "style9": "^0.18.2",
     "style9-webpack": "0.5.2",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0"
   }
 }
